[package]
name = "zero_pass_backend_derive"
version = "0.1.0"
edition = "2021"
authors = ["caio <wabros@proton.me>"]
license = "GPL-3.0"
description = "derive macros of zero pass backend"
homepage = "https://gitlab.com/zero-pass/zero_pass_backend_derive"
repository = "https://gitlab.com/zero-pass/zero_pass_backend_derive"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }

[lib]
proc-macro = true
